plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

configurations {
    all {
        // 프로젝트 전체에서 Oracle XML 파서 강제 제외
        exclude group: 'com.oracle.database.xml', module: 'xmlparserv2'
    }
}

group = 'com.bnk'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

// ── Spring 6+ @PathVariable / @CookieValue / @RequestParam 파라미터 이름 인식 ──
tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['-parameters']
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

ext {
	set('springAiVersion', "2.0.0-M6")
}

dependencies {
	//AI 테스트
    //implementation("org.springframework.ai:spring-ai-starter-model-ollama:2.0.0-M7")
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation("org.springframework.boot:spring-boot-starter-jdbc:4.1.0-RC1")
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation("com.h2database:h2:2.4.240")
	
	// ── Redis ───────────────────────────────────────────
    // MemoryTokenStore → RedisTokenStore 전환
    // 이메일 인증 토큰 / 비밀번호 재설정 토큰 TTL 관리
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	

	// ── GenAI ─────────────────────────────────────────────
	implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'
	implementation 'org.springframework.ai:spring-ai-starter-model-google-genai-embedding'

	// ── Spring Boot Starters ───────────────────────────────
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// ── MyBatis ───────────────────────────────────────────
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:4.0.1'

	// ── JWT ───────────────────────────────────────────────
	// Gradle은 중복을 자동 처리하지만 버전이 달라질 경우 예상치 못한 충돌 위험이 있으므로 단일 선언으로 정리.
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly    'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly    'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// ── AI / Vector Store ─────────────────────────────────
	implementation platform('org.springframework.ai:spring-ai-bom:2.0.0-M6')
	implementation 'org.springframework.ai:spring-ai-starter-vector-store-qdrant'

	// ── DB Driver ─────────────────────────────────────────
	runtimeOnly('com.oracle.database.jdbc:ojdbc11-production:23.3.0.23.09') {
		// MyBatis XML 파싱 충돌을 일으키는 Oracle XML 파서 제외
		exclude group: 'com.oracle.database.xml', module: 'xmlparserv2'
	}

	// ── Oracle OCI SDK (Object Storage) ───────────────────
	implementation 'com.oracle.oci.sdk:oci-java-sdk-objectstorage:3.42.0'
	implementation 'com.oracle.oci.sdk:oci-java-sdk-common:3.42.0'
	implementation 'com.oracle.oci.sdk:oci-java-sdk-common-httpclient-jersey3:3.42.0'

	// ── Lombok ────────────────────────────────────────────
	compileOnly           'org.projectlombok:lombok'
	annotationProcessor   'org.projectlombok:lombok'

	// ── Apache PDFBox (PDF → 이미지 변환) ─────────────────
	implementation 'org.apache.pdfbox:pdfbox:3.0.3'
	implementation 'org.apache.pdfbox:pdfbox-io:3.0.3'

	// ── Test ──────────────────────────────────────────────
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-mail-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:4.0.1'
	testCompileOnly         'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testRuntimeOnly         'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}